--- a/x-transactions/x-transactions.css
+++ b/x-transactions/x-transactions.css
@@ -101,12 +101,25 @@ x-transaction-modal center {
 
 x-transaction-modal x-identicon {
     display: block;
-    width: 160px;
+    width: 120px;
+    margin-bottom: 0.25em;
 }
 
 x-transaction-modal label {
+    display: block;
+    font-weight: 300;
+    text-transform: uppercase;
+    margin-top: 1em;
+}
+
+x-transaction-modal .label {
+    display: block;
+    margin-bottom: 0.5em;
+}
+
+x-transaction-modal x-address {
     display: inline-block;
-    width: 50%;
+    margin-bottom: 0.5em;
 }
 
 x-transaction-modal .blockHeight,
@@ -114,8 +127,8 @@ x-transaction-modal .confirmations,
 x-transaction-modal .timestamp,
 x-transaction-modal x-amount,
 x-transaction-modal .fee {
-    display: inline-block;
-    text-align: right;
+    display: block;
+    font-size: 1.2em;
 }
 
 x-transaction-modal x-amount {
