--- a/mixin-modal/mixin-modal.css
+++ b/mixin-modal/mixin-modal.css
@@ -34,10 +34,26 @@ x-modal-container > * {
     box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14),
         0 1px 8px 0 rgba(0, 0, 0, 0.12),
         0 3px 3px -2px rgba(0, 0, 0, 0.4);
-    padding: 24px 32px;
     border-radius: 5px;
 }
 
 x-modal-container > .visible {
     transform: translateY(0);
+}
+
+.modal-header {
+    padding-top: 16px;
+    text-align: center;
+}
+
+.modal-header::after {
+    content: "";
+    height: 3px;
+    background: var(--primary-background-toright);
+    display: block;
+    margin-top: 16px;
+}
+
+.modal-body {
+    padding: 16px 32px 24px;
 }
