--- a/mixin-modal/mixin-modal.css
+++ b/mixin-modal/mixin-modal.css
@@ -35,6 +35,8 @@ x-modal-container > * {
         0 1px 8px 0 rgba(0, 0, 0, 0.12),
         0 3px 3px -2px rgba(0, 0, 0, 0.4);
     border-radius: 5px;
+
+    max-width: 97%; /* Could also use 97vw */
 }
 
 x-modal-container > .visible {
@@ -56,4 +58,18 @@ x-modal-container > .visible {
 
 .modal-body {
     padding: 16px 32px 24px;
+}
+
+@media (max-width: 480px) {
+    .modal-body {
+        padding: 16px;
+    }
+
+    .modal-header {
+        padding-top: 12px;
+    }
+
+    .modal-header::after {
+        margin-top: 12px;
+    }
 }
