--- a/x-network-indicator/x-network-indicator.css
+++ b/x-network-indicator/x-network-indicator.css
@@ -1,3 +1,13 @@
+x-network-indicator hr {
+    border: 0;
+    height: 1px;
+    background: rgba(0, 0, 0, 0.5);
+}
+
+x-network-indicator div {
+    margin-bottom: 0.4em;
+}
+
 x-network-indicator label,
 x-network-indicator strong {
     display: inline-block;
