--- a/x-network-indicator/x-network-indicator.css
+++ b/x-network-indicator/x-network-indicator.css
@@ -1,3 +1,8 @@
+x-network-indicator {
+    display: block;
+    padding-top: 0.4em;
+}
+
 x-network-indicator hr {
     border: 0;
     height: 1px;
