--- a/x-send-transaction/x-send-transaction-modal.css
+++ b/x-send-transaction/x-send-transaction-modal.css
@@ -15,15 +15,16 @@ x-send-transaction-modal input::placeholder {
     color: rgba(0, 0, 0, .3) !important;
 }
 
-x-send-transaction-plain-confirm-modal {
+x-send-transaction-offline-modal {
+    max-width: 500px;
     text-align: center;
 }
 
-x-send-transaction-plain-confirm-modal p {
+x-send-transaction-offline-modal p {
     margin: 1em 0;
 }
 
-x-send-transaction-plain-confirm-modal textarea {
+x-send-transaction-offline-modal textarea {
     width: 100%;
     min-height: 225px;
     background: #e9e9e9;
