--- a/mixin-modal/mixin-modal.css
+++ b/mixin-modal/mixin-modal.css
@@ -1,46 +1,16 @@
-x-modal-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0);
-    z-index: 1;
-    transition: background .7s;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    outline: none !important;
-    -webkit-tap-highlight-color: transparent;
-}
+@import "x-modals.css";
+@import "x-modal-container.css";
 
-x-modal-container:not(.display),
-x-modal-container > :not(.display) {
-    display: none;
-}
-
-x-modal-container.visible {
-    background: rgba(0, 0, 0, 0.3);
-}
-
-x-modal-container > * {
-    transform: translateY(100vh);
-    transition: transform .7s;
-    will-change: transform;
-
+.x-modal {
     background: white;
     color: rgba(0,0,0,0.8);
     box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14),
         0 1px 8px 0 rgba(0, 0, 0, 0.12),
         0 3px 3px -2px rgba(0, 0, 0, 0.4);
     border-radius: 5px;
+    margin: auto;
 
     max-width: 97%; /* Could also use 97vw */
-}
-
-x-modal-container > .visible {
-    transform: translateY(0);
 }
 
 .modal-header {
