--- a/mixin-modal/mixin-modal.css
+++ b/mixin-modal/mixin-modal.css
@@ -47,7 +47,7 @@
 
 @media (max-width: 480px) {
     .modal-body {
-        padding: 16px;
+        padding: 16px 16px 24px;
     }
 
     .modal-header {
