--- a/mixin-modal/x-modals.css
+++ b/mixin-modal/x-modals.css
@@ -5,6 +5,6 @@ x-modals {
     left: 0;
     width: 100%;
     height: 100%;
-    transition: background .4s;
+    transition: background .4s ease-out;
     z-index: 1;
 }
