--- a/x-password-setter/x-password-setter.css
+++ b/x-password-setter/x-password-setter.css
@@ -7,6 +7,8 @@ x-password-setter {
 	justify-content: space-between;
 	width: 100%;
 	max-width: var(--max-width);
+	margin-bottom: 58px;
+	flex-grow: 1;
 }
 
 x-password-setter div[buttons] {
