--- a/x-mnemonic-input/x-mnemonic-input.css
+++ b/x-mnemonic-input/x-mnemonic-input.css
@@ -7,6 +7,7 @@ x-mnemonic-input {
     line-height: 32px;
     will-change: transform;
     display: block;
+    margin-bottom: 28px;
 }
 
 x-mnemonic-input.shake {
