--- a/x-accounts/x-accounts.css
+++ b/x-accounts/x-accounts.css
@@ -39,7 +39,7 @@ x-account {
     display: flex;
     padding: 8px 0;
     /* border-bottom: 1px solid rgba(0, 0, 0, 0.1); */
-    animation: from-right 500ms;
+    /* animation: from-right 500ms; */
     cursor: pointer;
     position: relative;
 }
