Setting position of the parent of an x-route to relative so that animations can work with absolute position to be next or on-top of each other.

--- a/x-router/x-router.css
+++ b/x-router/x-router.css
@@ -13,6 +13,10 @@ x-route.in,
     display: flex;
 } */
 
+.x-route-parent {
+    position: relative;
+}
+
 x-route:not(.out), [x-route]:not(.out) {
     display: flex;
 }
