--- a/x-amount-input/x-amount-input.css
+++ b/x-amount-input/x-amount-input.css
@@ -3,6 +3,7 @@
 
 x-amount-input input {
     font-size: 56px !important;
+    font-weight: 300;
     padding-bottom: 0;
     width: 100% !important;
 }
