--- a/x-send-transaction/x-send-transaction.css
+++ b/x-send-transaction/x-send-transaction.css
@@ -16,10 +16,8 @@
     letter-spacing: 0.16em;
 }
 
-.x-send-transaction x-accounts-dropdown {
-    width: 100%;
-}
-
+.x-send-transaction input,
+.x-send-transaction input::placeholder,
 .x-send-transaction x-address-input {
     font-size: 20px !important;
     /* text-align: left !important; */
