receive request modal style

--- a/x-request-link/x-receive-request-link-modal.css
+++ b/x-request-link/x-receive-request-link-modal.css
@@ -3,3 +3,7 @@ x-receive-request-link-modal x-identicon {
     width: 160px;
     margin: 0 auto;
 }
+
+x-receive-request-link-modal .x-message {
+    margin: 20px;
+}
