create-request-link: fixes and style

--- a/x-request-link/x-create-request-link-modal.css
+++ b/x-request-link/x-create-request-link-modal.css
@@ -1,3 +1,12 @@
 x-create-request-link-modal {
     width: 600px;
 }
+
+x-create-request-link-modal .x-request-link {
+    cursor: pointer;
+}
+
+x-create-request-link-modal ul {
+    padding-left: 12px;
+    list-style: square;
+}
