--- a/legacy/screen-loading/screen-loading.css
+++ b/legacy/screen-loading/screen-loading.css
@@ -1,1 +1,1 @@
-@import '../../x-loading-animation/x-loading-animation.css';
+@import '../../../secure-elements/x-loading-animation/x-loading-animation.css';
