--- a/legacy/screen-backup-phrase/screen-backup-phrase.css
+++ b/legacy/screen-backup-phrase/screen-backup-phrase.css
@@ -1,3 +1,3 @@
 @import '../../x-screen/x-screen.css';
-@import '../../x-privacy-agent/x-privacy-agent.css';
-@import '../../x-mnemonic-phrase/x-mnemonic-phrase.css';
+@import '../../../secure-elements/x-privacy-agent/x-privacy-agent.css';
+@import '../../../secure-elements/x-mnemonic-phrase/x-mnemonic-phrase.css';
