--- a/mixin-modal/mixin-modal.css
+++ b/mixin-modal/mixin-modal.css
@@ -16,14 +16,24 @@
 .modal-header {
     padding-top: 16px;
     text-align: center;
+    position: relative;
 }
 
 .modal-header h2 {
-    padding: 2px 32px;
+    padding: 2px 64px;
     text-transform: uppercase;
     letter-spacing: 0.16em;
     font-size: 13px;
     font-weight: bold;
+}
+
+.modal-header [x-modal-close] {
+    position: absolute;
+    right: 0;
+    top: 3px;
+    padding: 14px;
+    cursor: pointer;
+    width: 52px;
 }
 
 .modal-header::after {
