Do not remove, but only mark removed

--- a/x-transactions/x-transactions.css
+++ b/x-transactions/x-transactions.css
@@ -46,6 +46,11 @@ x-transaction {
     cursor: pointer;
 }
 
+x-transaction.removed,
+x-transaction.expired {
+    background: var(--warning-color);
+}
+
 x-transaction > * {
     /* border-bottom: 1px solid rgba(0, 0, 0, 0.1); */
     display: table-cell !important;
