--- a/x-network-indicator/x-network-indicator.css
+++ b/x-network-indicator/x-network-indicator.css
@@ -2,6 +2,11 @@ x-network-indicator {
     display: block;
     /* padding-top: 0.4em; */
 }
+
+x-card x-network-indicator hr {
+    margin-bottom: 0.5em;
+}
+
 x-network-indicator div {
     line-height: 45px;
 }
