--- a/x-accounts/x-accounts.css
+++ b/x-accounts/x-accounts.css
@@ -235,10 +235,16 @@ x-accounts-list:empty:before {
 }
 
 x-accounts-list x-no-content {
-	display: flex;
-	flex-grow: 1;
 	font-size: 20px;
-	align-items: center;
-	justify-content: center;
-	height: 100%;
+    display: block;
+    padding: 1.5em;
+    text-align: center;
+    opacity: 0.6;
+}
+
+x-accounts-list x-no-content h1.material-icons {
+    display: block;
+    font-size: 120px;
+    opacity: 0.3;
+    margin-bottom: 0.1em;
 }
