--- a/x-transactions/x-transactions.css
+++ b/x-transactions/x-transactions.css
@@ -167,12 +167,18 @@ x-transaction.expired x-currency-nim {
 }
 
 x-transactions-list x-no-content {
-	display: flex;
-	flex-grow: 1;
 	font-size: 20px;
-	align-items: center;
-	justify-content: center;
-	height: 100%;
+    display: block;
+    padding: 1.5em;
+    text-align: center;
+    opacity: 0.6;
+}
+
+x-transactions-list x-no-content h1.material-icons {
+    display: block;
+    font-size: 120px;
+    opacity: 0.3;
+    margin-bottom: 0.1em;
 }
 
 x-paginator {
